Correct HTML structure and fix typos
Fixed various HTML syntax errors and corrected typos in tags.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ background-color: #e65c50;
 
 <section class="recipes">
 <div class="card".
-<img src="https://via.placeholder.com/300*200" alt="pasta" />
+<img src="https://imgs.search.brave.com/e6nQ_fXTsbt71RYhH9Ay4QKxyMYcpcnHwH2bvuoFs5s/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/c2h1dHRlcnN0b2Nr/LmNvbS9pbWFnZS1w/aG90by9mdXNpbGxp/LXBhc3RhLXNwaXJh/bC1zcGlyYWxpLXRv/bWF0by0yNjBudy0y/NTYyMTE5ODI5Lmpw/Zw" />
 <h3<Classic Pasta</h3>
 <p>Master the art of Italian pasta with this easy guide.</P>
 </div>
@@ -98,6 +98,7 @@ background-color: #e65c50;
 </section>
 </body>
 </html>
+
 
 
 
